--- a/betterkorean/src/main/res/values/strings.xml
+++ b/betterkorean/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">BetterKorean</string>
+    <string name="sample_app_name">BetterKorean</string>
 </resources>
