--- a/betterkorean/src/main/res/values/strings.xml
+++ b/betterkorean/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="sample_app_name">BetterKorean</string>
+    <string name="description">아름다운 우리 한글</string>
 </resources>
